--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                     <a class="dropdown-item" href="{% url 'blog:all_blogs' %}">All Blog</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="{% url 'blog:make_blog' %}">Make Blog</a>
                 </div>
                 </li>
                 <li class="nav-item">
