--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,28 @@
           <p>
             <a href="mailto:nage82822@gmail.com" class="btn btn-primary my-2">Email Me</a>
           </p>
-          <img src="{% static 'portfolio.jpg' %}" height="500">
+          <!-- <img src="{% static 'test.jpg' %}" height="500"> -->
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="{% static 'test.jpg' %}" height="500">
+                </div>
+                <div class="carousel-item">
+                    <img src="{% static 'test2.jpg' %}" height="500">
+                </div>
+                <div class="carousel-item">
+                    <img src="{% static 'portfolio.jpg' %}" height="500">
+                </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+                </a>
+            </div>
         </div>
     </section>
 
